website/versioned_docs/version-0.67/native-api/index-api-windows.md
---
id: "version-0.67-Native-API-Reference"
title: "namespace Microsoft.ReactNative"
sidebar_label: "Full reference"
original_id: "Native-API-Reference"

---

## Enums
- [`AccessibilityRoles`](AccessibilityRoles)
- [`AccessibilityStates`](AccessibilityStates)
- [`AccessibilityValue`](AccessibilityValue)
- [`BackNavigationHandlerKind`](BackNavigationHandlerKind)
- [`CanvasComposite`](CanvasComposite)
- [`CanvasEdgeBehavior`](CanvasEdgeBehavior)
- [`EffectBorderMode`](EffectBorderMode)
- [`EffectOptimization`](EffectOptimization)
- [`JSIEngine`](JSIEngine)
- [`JSValueType`](JSValueType)
- [`JsiErrorType`](JsiErrorType)
- [`JsiValueKind`](JsiValueKind)
- [`LogLevel`](LogLevel)
- [`MethodReturnType`](MethodReturnType)
- [`PointerEventKind`](PointerEventKind)
- [`RedBoxErrorType`](RedBoxErrorType)
- [`ViewManagerPropertyType`](ViewManagerPropertyType)
## Interfaces
- [`IJSValueReader`](IJSValueReader)
- [`IJSValueWriter`](IJSValueWriter)
- [`IJsiByteBuffer`](IJsiByteBuffer)
- [`IJsiHostObject`](IJsiHostObject)
- [`IReactContext`](IReactContext)
- [`IReactDispatcher`](IReactDispatcher)
- [`IReactModuleBuilder`](IReactModuleBuilder)
- [`IReactNonAbiValue`](IReactNonAbiValue)
- [`IReactNotificationArgs`](IReactNotificationArgs)
- [`IReactNotificationService`](IReactNotificationService)
- [`IReactNotificationSubscription`](IReactNotificationSubscription)
- [`IReactPackageBuilder`](IReactPackageBuilder)
- [`IReactPackageBuilderExperimental`](IReactPackageBuilderExperimental)
- [`IReactPackageProvider`](IReactPackageProvider)
- [`IReactPropertyBag`](IReactPropertyBag)
- [`IReactPropertyName`](IReactPropertyName)
- [`IReactPropertyNamespace`](IReactPropertyNamespace)
- [`IReactRootViewExperimental`](IReactRootViewExperimental)
- [`IReactSettingsSnapshot`](IReactSettingsSnapshot)
- [`IReactViewHost`](IReactViewHost)
- [`IReactViewInstance`](IReactViewInstance)
- [`IRedBoxErrorFrameInfo`](IRedBoxErrorFrameInfo)
- [`IRedBoxErrorInfo`](IRedBoxErrorInfo)
- [`IRedBoxHandler`](IRedBoxHandler)
- [`IViewManager`](IViewManager)
- [`IViewManagerCreateWithProperties`](IViewManagerCreateWithProperties)
- [`IViewManagerRequiresNativeLayout`](IViewManagerRequiresNativeLayout)
- [`IViewManagerWithChildren`](IViewManagerWithChildren)
- [`IViewManagerWithCommands`](IViewManagerWithCommands)
- [`IViewManagerWithExportedEventTypeConstants`](IViewManagerWithExportedEventTypeConstants)
- [`IViewManagerWithExportedViewConstants`](IViewManagerWithExportedViewConstants)
- [`IViewManagerWithNativeProperties`](IViewManagerWithNativeProperties)
- [`IViewManagerWithPointerEvents`](IViewManagerWithPointerEvents)
- [`IViewManagerWithReactContext`](IViewManagerWithReactContext)
## Structs
- [`AccessibilityAction`](AccessibilityAction)
- [`DesktopWindowMessage`](DesktopWindowMessage)
- [`JsiObjectRef`](JsiObjectRef)
- [`JsiPropertyIdRef`](JsiPropertyIdRef)
- [`JsiScopeState`](JsiScopeState)
- [`JsiStringRef`](JsiStringRef)
- [`JsiSymbolRef`](JsiSymbolRef)
- [`JsiValueRef`](JsiValueRef)
- [`JsiWeakObjectRef`](JsiWeakObjectRef)
## Classes
- [`BorderEffect`](BorderEffect)
- [`ColorSourceEffect`](ColorSourceEffect)
- [`CompositeStepEffect`](CompositeStepEffect)
- [`DevMenuControl`](DevMenuControl)
- [`DynamicAutomationPeer`](DynamicAutomationPeer)
- [`DynamicAutomationProperties`](DynamicAutomationProperties)
- [`DynamicValueProvider`](DynamicValueProvider)
- [`GaussianBlurEffect`](GaussianBlurEffect)
- [`InstanceCreatedEventArgs`](InstanceCreatedEventArgs)
- [`InstanceDestroyedEventArgs`](InstanceDestroyedEventArgs)
- [`InstanceLoadedEventArgs`](InstanceLoadedEventArgs)
- [`JsiError`](JsiError)
- [`JsiPreparedJavaScript`](JsiPreparedJavaScript)
- [`JsiRuntime`](JsiRuntime)
- [`QuirkSettings`](QuirkSettings)
- [`ReactApplication`](ReactApplication)
- [`ReactCoreInjection`](ReactCoreInjection)
- [`ReactDispatcherHelper`](ReactDispatcherHelper)
- [`ReactInstanceSettings`](ReactInstanceSettings)
- [`ReactNativeHost`](ReactNativeHost)
- [`ReactNotificationServiceHelper`](ReactNotificationServiceHelper)
- [`ReactPointerEventArgs`](ReactPointerEventArgs)
- [`ReactPropertyBagHelper`](ReactPropertyBagHelper)
- [`ReactRootView`](ReactRootView)
- [`ReactViewOptions`](ReactViewOptions)
- [`RedBoxHelper`](RedBoxHelper)
- [`ViewControl`](ViewControl)
- [`ViewPanel`](ViewPanel)
- [`XamlHelper`](XamlHelper)
- [`XamlMetaDataProvider`](XamlMetaDataProvider)
- [`XamlUIService`](XamlUIService)
## Delegates
- [`AccessibilityActionEventHandler`](AccessibilityActionEventHandler)
- [`AccessibilityInvokeEventHandler`](AccessibilityInvokeEventHandler)
- [`ConstantProviderDelegate`](ConstantProviderDelegate)
- [`InitializerDelegate`](InitializerDelegate)
- [`JSValueArgWriter`](JSValueArgWriter)
- [`JsiByteArrayUser`](JsiByteArrayUser)
- [`JsiHostFunction`](JsiHostFunction)
- [`LogHandler`](LogHandler)
- [`MethodDelegate`](MethodDelegate)
- [`MethodResultCallback`](MethodResultCallback)
- [`ReactCreatePropertyValue`](ReactCreatePropertyValue)
- [`ReactDispatcherCallback`](ReactDispatcherCallback)
- [`ReactModuleProvider`](ReactModuleProvider)
- [`ReactNotificationHandler`](ReactNotificationHandler)
- [`ReactViewManagerProvider`](ReactViewManagerProvider)
- [`SyncMethodDelegate`](SyncMethodDelegate)
- [`UIBatchCompleteCallback`](UIBatchCompleteCallback)
